<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:padding="10dp"
    android:background="@color/colorPrimary"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="profile.firebase.ui.advanced_profileui_mokup_firebase.RegisterActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

  <ProgressBar
      android:indeterminate="true"
      android:visibility="gone"
      android:id="@+id/progressRegister"
      style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      />

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <TextView
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:textSize="24sp"
        android:text="@string/new_account_txt"
        android:fontFamily="@font/nunito_semibold"
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        app:civ_border_width="1dp"
        app:civ_border_overlay="true"
        app:civ_border_color="@color/colorWhite"
        android:layout_gravity="center_horizontal"
        android:id="@+id/profileImage"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_empty_image_user"
        />
    <EditText
        android:id="@+id/register_editText_name"
        android:fontFamily="@font/nunito_semibold"
        android:padding="10dp"
        android:background="@drawable/shape"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        />

    <EditText
        android:id="@+id/register_editText_email"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/nunito_semibold"
        android:padding="10dp"
        android:background="@drawable/shape"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        />

    <EditText
        android:id="@+id/register_editText_password"
        android:inputType="textPassword"
        android:fontFamily="@font/nunito_semibold"
        android:padding="10dp"
        android:background="@drawable/shape"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        />

    <Button
        android:id="@+id/btn_create_account"
        android:textAllCaps="false"
        android:text="@string/create_a_new_account"
        android:layout_margin="10dp"
        android:fontFamily="@font/nunito_extrabold"
        android:textColor="@color/colorWhite"
        android:padding="8dp"
        android:background="@drawable/shape_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/btn_back_login"
        android:textAllCaps="false"
        android:text="@string/back_txt"
        android:layout_margin="15dp"
        android:fontFamily="@font/nunito_extrabold"
        android:textColor="@color/colorWhite"
        android:padding="8dp"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />




  </LinearLayout>

</RelativeLayout>
